--- a/index.html
+++ b/index.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>My Webpage</title>
+        <title>MAInterest</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles.css" />
+        <style>
+          .container{ font-weight: bold; font-size: 20px; padding-top: 20px; }
+          .row{ text-decoration-line: underline; text-decoration-style: wavy;}
+        </style>
     </head>
     <body>
-        Monique Alleyne
+      <div id="top">
+       <h1> Quaratined Monique Alleyne </h1>
+      </div>
+
+      <div id="middle">
+      <p>
+        During this time of quaratine, I have alot of time on my hands. I have been been give a chance to reflect on my life rather than
+        just working my life.  I have a chance to realize what I like to do for myself.  Though there are alot of things I like to <!DOCTYPE html>
+        I will only list the top three.
+      </p>
+      </div>
+      <div></div>
+      <h4>
+        Things I like to do:
+      </h4>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+      Eat
+      </div>
+        <div class="col-sm">
+      Exercise
+      <a href="Exercise.html"><img class="Exercise" img src="/Users/moniquealleyne/project0/ChloeTing-img.png "></a>
+      </div>
+        <div class="col-sm">
+      Relax
+      </div>
+      </div>
+      </div>
+
+
+
+
+      <div id="bottom">
+      </div>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     </body>
-    <ul>
-      <li>Food</li>
-      <li>Exercise</li>
-      <li>Spa</li>
-    </ul>
-
-
-
-
 
 </html>
