--- a/index.html
+++ b/index.html
@@ -4,51 +4,65 @@
         <title>MAInterest</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
-          .container{ font-weight: bold; font-size: 20px; padding-top: 20px; }
-          .row{ text-decoration-line: underline; text-decoration-style: wavy;}
+          .container{font-weight: bold; font-size: 20px; padding: 20px;}
+          .row{height: 500px; text-decoration-line: underline; text-decoration-style: wavy;}
+          h4{font: arial; padding-top: : 15px}
         </style>
     </head>
     <body>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="index.html">Home</a>
+        <a class="nav-item nav-link" href="Food.html">Eat</a>
+        <a class="nav-item nav-link" href="Exercise.html">Exercise</a>
+        <a class="nav-item nav-link" href="Relax.html">Relax</a>
+      </div>
+      </div>
+      </nav>
       <div id="top">
-       <h1> Quaratined Monique Alleyne </h1>
+       <h1> Quarantined Monique</h1>
       </div>
 
       <div id="middle">
       <p>
-        During this time of quaratine, I have alot of time on my hands. I have been been give a chance to reflect on my life rather than
-        just working my life.  I have a chance to realize what I like to do for myself.  Though there are alot of things I like to <!DOCTYPE html>
-        I will only list the top three.
+        During this time of quarantine, there is alot of time to spare. We are given a chance to reflect on our lives rather than
+        just working it.  Though getting lost in my thoughts and stresses of life as we can all relate, I have a chance
+        to realize what I like to do for myself. Besides, self care is important and invalueable to one's life.  Though there
+        are alot of things I like to do I will only list three. Click the links below to explore my interests.
       </p>
       </div>
-      <div></div>
       <h4>
         Things I like to do:
       </h4>
 
       <div class="container">
         <div class="row">
-          <div class="col-sm">
-      Eat
+          <div class="col-lg-3 col-sm-6">
+            Eat<a href="Food.html"><img class="Food" img src="pics/cheesebiscuit1.jpg"></a>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            Exercise
+            <a href="Exercise.html"><img class="Exercise" img src="pics/Exercise1.jpeg"></a>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            Relax
+            <a href="Relax.html"><img class="Relax" img src="pics/relax1.jpg"></a>
+          </div>
+          </div>
+        </div>
       </div>
-        <div class="col-sm">
-      Exercise
-      <a href="Exercise.html"><img class="Exercise" img src="/Users/moniquealleyne/project0/ChloeTing-img.png "></a>
-      </div>
-        <div class="col-sm">
-      Relax
-      </div>
-      </div>
-      </div>
-
-
-
-
       <div id="bottom">
+        <p>Created by M.A.</p>
       </div>
+
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     </body>
-
 </html>
